# prompt-toolkit-rs

./: Cargo.toml  README.md  demo.tape
.github/workflows/: checks.yml  ci.yml
prompt_cli/: Cargo.toml
prompt_cli/src/: main.rs
prompt_toolkit/: Cargo.toml
prompt_toolkit/src/: keys.rs  lib.rs  render.rs  screen.rs
prompt_toolkit/src/application/: base.rs  mod.rs
prompt_toolkit/src/clipboard/: base.rs  mod.rs
prompt_toolkit/src/filters/: base.rs  mod.rs
prompt_toolkit/src/input/: ansi_escape_sequences.rs  base.rs  input.rs  mod.rs  posix_utils.rs  vt100.rs  vt100_parser.rs
prompt_toolkit/src/key_bindings/: base.rs  mod.rs
prompt_toolkit/src/layout/: mod.rs
prompt_toolkit/src/output/: base.rs  mod.rs  output.rs  vt100.rs
prompt_toolkit/src/shortcuts/: mod.rs  prompt.rs
prompt_toolkit/src/styles/: base.rs  color.rs  mod.rs
