[workspace]
default-members = ["prompt_toolkit", "prompt_cli"]
members = ["prompt_toolkit", "prompt_cli"]
resolver = "2"

[workspace.package]
authors = ["Grant Azure <azure.grant@gmail.com>"]
categories = ["prompt"]
edition = "2021"
license = "Apache-2.0 OR MIT"
version = "0.1.0"
keywords = ["prompt", "cli", "menu"]

[workspace.dependencies]
clap = "4.5.16"
libc = "0.2.155"
nix = { version = "0.29", default-features = false, features = ["fs", "ioctl", "poll", "signal", "term"] }
regex = "1.11.1"
termsize = "0.1.9"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
unicode-width = "0.2.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
