[package]
authors.workspace = true
description = "Hello"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "prompt_toolkit"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
unicode-width = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
nix = { workspace = true, default-features = false, features = [
    "fs",
    "ioctl",
    "poll",
    "signal",
    "term",
] }
utf8-decode = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
